crates/daemon/tests/snapshots/cli_help__cli_help_archive.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Archive a message (remove from inbox)

Usage: mxr archive [OPTIONS] [MESSAGE_ID]...

Arguments:
  [MESSAGE_ID]...  Message ID(s). If omitted, reads IDs from stdin when stdin is piped

Options:
      --search <SEARCH>    Operate on messages matching search query
      --account <ACCOUNT>
      --yes                Skip confirmation
      --dry-run            Show what would happen
      --async              Run as a daemon-side background job and poll with `mxr jobs`
      --format <FORMAT>    [possible values: table, json, jsonl, csv, ids]
  -h, --help               Print help
