crates/daemon/tests/snapshots/cli_help__cli_help_attachments.snap
---
source: crates/daemon/tests/cli_help.rs
assertion_line: 13
expression: stdout
---
Manage message attachments

Usage: mxr attachments <COMMAND>

Commands:
  list      List attachments for one message, or for every match of a `--search QUERY`. Multi-message output prefixes each section with `--- MESSAGE_ID ---`
  download  Download attachment(s)
  open      Open attachment with system handler
  help      Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help
