crates/daemon/tests/snapshots/cli_help__cli_help_attachments_download.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Download attachment(s)

Usage: mxr attachments download [OPTIONS] <MESSAGE_ID> [INDEX]

Arguments:
  <MESSAGE_ID>
  [INDEX]       Attachment index (1-based, omit for all)

Options:
      --dir <DIR>  Output directory
  -h, --help       Print help
