crates/daemon/tests/snapshots/cli_help__cli_help_attachments_open.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Open attachment with system handler

Usage: mxr attachments open <MESSAGE_ID> <INDEX>

Arguments:
  <MESSAGE_ID>
  <INDEX>       Attachment index (1-based)

Options:
  -h, --help  Print help
