crates/daemon/tests/snapshots/cli_help__cli_help_briefing.snap
---
source: crates/daemon/tests/cli_help.rs
assertion_line: 14
expression: stdout
---
Render a thread or recipient briefing, or a conversation's context

Usage: mxr briefing <COMMAND>

Commands:
  context    What matters before reading a conversation: the person, whether you owe a reply, open promises, and the gist and ask from a model
  thread
  recipient
  help       Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help
